# strands-mcp-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: claude.yml
.streamlit/: secrets.toml.sample
