[project]
name = "strands-mcp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.93.0",
    "strands-agents[otel]>=0.1.9",
    "strands-agents-builder>=0.1.4",
    "streamlit>=1.46.1",
]
[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 127